# v

./: Cargo.toml  package-lock.json  package.json
ddd/: Cargo.toml
ddd-derive/: Cargo.toml
ddd-derive/src/: entity.rs  lib.rs  vo.rs
ddd/src/: aggregate.rs  entity.rs  lib.rs  repo.rs  vo.rs
ddd/src/prelude/: v0.rs
plugin/: Cargo.toml
plugin/src/: lib.rs  version.rs
src/: lib.rs  main.rs
src/app/: error.rs  kernel.rs  mod.rs  result.rs
src/domain/: error.rs  mod.rs  result.rs
src/domain/entity/: effector.rs  mod.rs  sensor.rs
src/domain/vo/: effector_id.rs  mod.rs  sensor_id.rs
src/infra/: error.rs  mod.rs  result.rs
src/prelude/: v0.rs
v_plugin/: Cargo.toml
v_plugin/src/: lib.rs  version.rs
yadi/: Cargo.toml
yadi/src/: builder.rs  factory.rs  lib.rs  result.rs  service_locator.rs  tag.rs
yadi/src/prelude/: v0.rs
