[workspace]
resolver = "2"
members = [ "ddd", "ddd-derive", "plugin", "yadi"]

[package]
name = "v"
version = "0.1.0"
edition = "2021"

[dependencies]
ddd = { path = "ddd" }
ddd-derive = { path = "ddd-derive" }
libloading = { version = "0.8" }
thiserror = { version = "1" }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1" }
plugin = { path = "plugin" }
yadi = { path = "yadi" }
